# hydrophonitor-gps

./: .gitignore  Cargo.toml  default.nix  flake.nix  service.nix  shell.nix
nixosModules/: service.nix
src/: main.rs
