[package]
name = "gps-recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpsd_proto = { version = "0.7.0", git = "https://github.com/juliuskoskela/gpsd_proto", rev = "fbf3f9d", features = [ "serialize" ] }
argparse = "0.2.2"
chrono = "0.4.19"
log = "0.4.20"
itertools = "0.11.0"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
